am scos ca imi plac dragonii :(

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div id="content">  
                     <p> Usually, the more new things I have to learn the better.<br>
                         Truth be told, like most other people, I sometimes fail to finish some of them because of the amount of things I need to master in a short amount of time. Most of the time though, they push me into giving my best, but also most importantly, it got me into <b>learning how to learn</b>, which i believe is one of the most important things you can focus on in the age of internet.<br><br>
-                        In regards to games, not to state the obvious here, but I love playing them (from paying cards to board games and digital) since I was a little child, <b>especially anything that has dragons in it</b>. My favorite games are, of course, <b>Dragon Age Inquisition</b> and <b>Dungeons & Dragons</b> (again — I really love dragons).<br><br>
+                        In regards to games, not to state the obvious here, but I love playing them (from paying cards to board games and digital) since I was a little child, <b>especially anything that has dragons in it</b>. My favorite games are, of course, <b>Dragon Age Inquisition</b> and <b>Dungeons & Dragons</b>.<br><br>
                         
                         I always liked to combine a large variety of techniques and different pieces of knowledge, some of which don't have a direct link to the technical part but make the end product unique and interesting. Of course, I also have a passion for finding out the science behind the things I enjoy. That being said, I believe that the game industry is right for me. 
                         
