--- a/index.html
+++ b/index.html
@@ -281,13 +281,8 @@
                     <div class="stdTitlePicture"></div>
                     <h1 class="stdHeader">The Red Castle</h1>
                     <h2 class="stdSubheader">Motion Graphics</h2>
-                    <p class="stdBody"><b class="stdBold">Faction:</b> The High Order<br>
-                        <b>Alignment:</b> Lawful Evil<br>
-                        <b>Lore:</b> Coming from a long line of genetically gifted heirs to the shady High Order. Yara is a high priestess that uses her power to command an arsenal of knives.
-                        She is a cold hearted, sharp minded woman, with precise features, a gosthly white complexion and frightening red eyes. 
-                        
-                        Her team mates are more important than life itself. Even if she seems cold and unforgiving at the surface, she ows her life to them. 
-                        She is loyal dedicated to her beliefs and will give anything to achieve her goals — even her life.
+                    <p class="stdBody">This piece was made in the flat illustration design style and embodies a Sci- Fi scenery of a castle placed in space on a foreign planet. I used a warm color palette for it. <br>
+A challenging part of this was synchronizing the movement of the pillars in the background but in the end this turned out to be one of the most fun projects I did.
                     </p>
 
                     <p class="software"><b class="stdBold">Software:</b> Adobe Illustrator & Adobe Photoshop</p>
