--- a/index.html
+++ b/index.html
@@ -337,13 +337,8 @@ A challenging part of this was synchronizing the movement of the pillars in the 
                     <div class="stdTitlePicture"></div>
                     <h1 class="stdHeader">Vortex</h1>
                     <h2 class="stdSubheader">Abstract Environment</h2>
-                    <p class="stdBody"><b class="stdBold">Faction:</b> The High Order<br>
-                        <b>Alignment:</b> Lawful Evil<br>
-                        <b>Lore:</b> Coming from a long line of genetically gifted heirs to the shady High Order. Yara is a high priestess that uses her power to command an arsenal of knives.
-                        She is a cold hearted, sharp minded woman, with precise features, a gosthly white complexion and frightening red eyes. 
-                        
-                        Her team mates are more important than life itself. Even if she seems cold and unforgiving at the surface, she ows her life to them. 
-                        She is loyal dedicated to her beliefs and will give anything to achieve her goals — even her life.
+                    <p class="stdBody">This is part of a little exercise I like to do from time time, with no concept or any idea of what I am going to do  I open one or two programs and and play with different functions without giving much thought to what they are doing (It’s also a great way to learn new pieces of software).
+This one is my favorite so far, it was made with the 3D function in Illustrator and some of the blending modes in Photoshop.
                     </p>
                     <img id="Pillar" src="./Source/Vortex_Pillar.png">
                     <p class="software"><b class="stdBold">Software:</b> Adobe Illustrator, Photoshop & After Effects</p>
