--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 A challenging part of this was synchronizing the movement of the pillars in the background but in the end this turned out to be one of the most fun projects I did.
                     </p>
 
-                    <p class="software"><b class="stdBold">Software:</b> Adobe Illustrator & Adobe Photoshop</p>
+                    <p class="software"><b class="stdBold">Software:</b> Adobe Illustrator & After Effects</p>
                     <p class="postScriptum">*music from Epidemic Sound*</p>
                 </div>
             </div>
