--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
                     <br><br>I focused more on learning the technique than following exactly what the tutor did by trying to work ahead of the tutorials and only checking to see if I went about it the right way. 
                     </p>
-                    <p class="software"><b class="stdBold">Software:</b> Blender 3D & Adobe Substance Painter</p>
+                    <p class="software"><b class="stdBold">Software:</b> Blender 3D</p>
                 </div>
             </div>
 
@@ -317,7 +317,7 @@ A challenging part of this was synchronizing the movement of the pillars in the 
                         Then I animated the eyes to blink using frame by frame animation in Procreate and placed them in After Effects in order to make them blink asynchronously. In the background I illustrated a person’s figure, half skull — half face, split up by another mirror piece that was placed on the side with the face.
                         </p>
 
-                        <p class="software"><b class="stdBold">Software:</b> Adobe Illustrator & Adobe Photoshop</p>
+                        <p class="software"><b class="stdBold">Software:</b> Procreate & Adobe After Effects</p>
                 </div>
             </div>
 
