--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <nav>
+        <!--<nav>
             <ul>
                 <li><a id="1" href=" ">1</a></li>
                 <li><a id="2" href=" ">2</a></li>
@@ -26,7 +26,7 @@
                 <li><a id="12" href=" ">12</a></li>
                 <li><a id="13" href=" ">13</a></li>
             </ul>
-        </nav>
+        </nav>-->
         <!-- ABOUT ME -->
         <section id="AboutMe">
             <div id="leftSide">
